Fixing bug 62613, patch from Fabian <hidday@geocities.com>. CSSStyleDeclaration objects didn't support the array syntax in JS for calling the item() method. r=harishd@netscape.com, sr=jst@netscape.com